objects/Teacher__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_No__c</fullName>
        <label>Contact No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Designation__c</fullName>
        <inlineHelpText>Please mention your designation</inlineHelpText>
        <label>Designation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Teacher Email Id</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Qualification__c</fullName>
        <label>Qualification</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teacher_Id_Emp_ID__c</fullName>
        <inlineHelpText>Please Enter Your Emp ID</inlineHelpText>
        <label>Teacher Id (Emp ID)</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Years_of_Experience__c</fullName>
        <label>Years of Experience</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Teacher</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Teacher Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teachers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>